# tinycollectd

./: .gitignore  CATECHISM.md  Cargo.toml  LICENSE.md  README.md  tmp-id-ctrl-notes.md
.github/workflows/: rust.yml
service/: tinycollectd.service  tinyd.service
src/: collector.rs  main.rs
src/collector/: disk.rs  mod.rs  net.rs  nvme.rs  services.rs  sys.rs  tmp-id-ctrl-notes.md
test-listener/: metrics.out  tinyd_listen.py
tests/: test_collector.rs
