[package]
name = "tinycollectd"
version = "0.1.0"
edition = "2024"
description = "Everything that collectd gives you but better!"


[dependencies]
sysinfo = "0.30"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"  
tokio = { version = "1", features = ["full"] }
libatasmart = "0.3.3"
libparted = "0.1.5"
