[package]
name = "tinycollectd"
version = "0.1.0"
edition = "2024"
description = "Everything that collectd gives you but better!"
authors = [
  "Nathanael G. Reese <nathanaelreese@acm.org>",
  "Sion Avakian <avakianssion@gmail.com>"
]
repository = "https://github.com/avakianssion/tinycollectd"
readme = "README.md"
license = "MIT"
keywords = [
  "metrics",
  "monitoring",
  "cli"
]
categories = [
  "asynchronous",
  "command-line-utilities",
]

[dependencies]
sysinfo = "0.30"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"  
tokio = { version = "1", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
